Fixed security hotspots and bugs